// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unstructured Data Table Tests Should render correctly for correct input 1`] = `
<table
  className="ui striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
      <th
        className=""
      >
        Plan
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        4/8/2019
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
      <td
        className=""
      >
        some plan
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        4/8/2019
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
      <td
        className=""
      >
        some plan
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Unstructured Data Table Tests Should render correctly for correct input with onSelect handler 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
      <th
        className=""
      >
        Plan
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        4/8/2019
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
      <td
        className=""
      >
        some plan
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        4/8/2019
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
      <td
        className=""
      >
        some plan
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Unstructured Data Table Tests Should render correctly with selected row 1`] = `ShallowWrapper {}`;
